# FBrank

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  test.yml
examples/: basic_usage.py  functional_api.py
innermatch/: __init__.py  ranker.py
tests/: __init__.py  test_ranker.py
