[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "innermatch"
version = "0.1.0"
description = "A feedback-based ranking algorithm for information retrieval systems"
readme = "README.md"
authors = [
    {name = "Behrang Mehrparvar", email = "synaptosearch@gmail.com"}
]
license = {text = "Custom - Free for personal and academic use. Commercial use requires a paid license."}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ranking", "information-retrieval", "machine-learning", "feedback-learning"]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/iBM88/FBrank"
Repository = "https://github.com/iBM88/FBrank"
Issues = "https://github.com/iBM88/FBrank/issues"

[tool.setuptools.packages.find]
include = ["innermatch*"]
exclude = ["examples*", "tests*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
